# ELLMER

./: LICENSE  README.md
llm_robot_planning/: README.md
llm_robot_planning/custom_gpt_examples/: README.MD  app.py  custom_gpt_action_schema.md  custom_gpt_instructions.md
llm_robot_planning/haystack_rag_pipelines/: README.md  evaluate_models.py  example1.py  example2.py  generate_questions.py  generated_questions.json  results.md
llm_robot_planning/haystack_rag_pipelines/responses/: responses_no_rag_gpt-3.5-turbo.json  responses_no_rag_gpt-4.json  responses_no_rag_gpt-4o-mini.json  responses_no_rag_zephyr-7b-beta.json  responses_rag_gpt-3.5-turbo.json  responses_rag_gpt-4.json  responses_rag_gpt-4o-mini.json  responses_rag_zephyr-7b-beta.json
netft_rdt_driver/: CMakeLists.txt  README.md  package.xml
netft_rdt_driver/action/: Zero.action
netft_rdt_driver/include/netft_rdt_driver/: netft_rdt_driver.h
netft_rdt_driver/launch/: netft.launch
netft_rdt_driver/scripts/: parse_csv_log.py  plot.sh  run_ft.py
netft_rdt_driver/scripts/tests/: i0.bag
netft_rdt_driver/scripts/tests/csv/: i0__netft_netft_data.csv
netft_rdt_driver/src/: netft_node.cpp  netft_node_old.cpp  netft_rdt_driver.cpp
netft_rdt_driver/srv/: ZeroAxis.srv
robotiq_2finger_grippers/robotiq_2f_gripper_control/launch/: custom.launch  robotiq_action_server.launch  test_140mm_gripper_custom.launch
robotiq_2finger_grippers/robotiq_2f_gripper_control/scripts/: robotiq_2f_action_client_example.py
robotiq_2finger_grippers/robotiq_2f_gripper_control/src/robotiq_2f_gripper_control/: robotiq_2f_gripper.py
robotiq_2finger_grippers/robotiq_modbus_rtu/src/robotiq_modbus_rtu/: comModbusRtu.py
robotiq_2finger_grippers/robotiq_vacuum_gripper_description/: CMakeLists.txt  package.xml
robotiq_2finger_grippers/robotiq_vacuum_gripper_description/config/: display_urdf.rviz
robotiq_2finger_grippers/robotiq_vacuum_gripper_description/launch/: load.launch  view_urdf.launch
robotiq_2finger_grippers/robotiq_vacuum_gripper_description/urdf/: epick.urdf  epick.urdf.xacro  epick.xacro  materials.xacro
robotiq_2finger_grippers/robotiq_vacuum_gripper_description/urdf/meshes/: epick.stl
robotiq_2finger_grippers/robotiq_vacuum_grippers_control/: CMakeLists.txt  README.md  package.xml
robotiq_2finger_grippers/robotiq_vacuum_grippers_control/nodes/: RobotiqVacuumGrippersSimpleController.py
robotiq_2finger_grippers/robotiq_vacuum_grippers_control/src/robotiq_vacuum_grippers_control/: baseRobotiqVacuumGrippers.py  robotiq_vacuum_grippers_ctrl.py
ros_kortex/kortex_description/arms/gen3/7dof/urdf/: kinova_urdf.urdf
ros_kortex/kortex_driver/: CMakeLists.txt
ros_kortex/kortex_driver/launch/: kortex_driver.launch
ros_kortex/kortex_driver/msg/: TargetCoordinatesArray.msg
ros_kortex/kortex_examples/launch/smart_manipulator_launch/: run_affordances.launch  run_brain.launch  run_calibration.launch  run_force.launch  run_vision.launch
ros_kortex/kortex_examples/src/ELLMER/: EEF_pose.py  README.MD  action_execution.py  base.py  robot_affordances.py  robot_brain.py  utilities.py  utilities_affordance.py  utilities_draw.py
